compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_type_without_existing_import.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nfn wibble(wobble: Wibble) -> Nil { Nil }\n"
---
----- SOURCE CODE
-- wibble.gleam
pub type Wibble { Wobble }

-- main.gleam

fn wibble(wobble: Wibble) -> Nil { Nil }


----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:2:19
  │
2 │ fn wibble(wobble: Wibble) -> Nil { Nil }
  │                   ^^^^^^

The type `Wibble` is not defined or imported in this module.
Hint: Did you mean to import the `Wibble` type from the `wibble` module?
